slider dots (resolves issue on desktop; change the size on mobile)

--- a/assets/css/scss/layout/_slider.scss
+++ b/assets/css/scss/layout/_slider.scss
@@ -85,13 +85,14 @@
 
 			& > button {
 				background: transparent;
-				background-clip: padding-box;
 				border-style: solid;
 				border-width: 1px;
 				font: 0/0 a;
-				height: 6px;
+				height: 12px;
 				transition: all 300ms ease-in-out;
-				width: 40px;
+				width: 4rem;
+
+				@include media('>=tablet') { height: 6px; }
 			}
 		}
 	}
