--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1110,7 +1110,9 @@
 
 @media (min-width: 992px) { .lsx-to-slider-inner .slick-dots:not(.dropdown-menu) > li { padding: 0 7.5px; } }
 
-.lsx-to-slider-inner .slick-dots:not(.dropdown-menu) > li > button { background: transparent; background-clip: padding-box; border-style: solid; border-width: 1px; font: 0/0 a; height: 6px; transition: all 300ms ease-in-out; width: 40px; }
+.lsx-to-slider-inner .slick-dots:not(.dropdown-menu) > li > button { background: transparent; border-style: solid; border-width: 1px; font: 0/0 a; height: 12px; transition: all 300ms ease-in-out; width: 4rem; }
+
+@media (min-width: 992px) { .lsx-to-slider-inner .slick-dots:not(.dropdown-menu) > li > button { height: 6px; } }
 
 .lsx-to-slider-inner .slick-arrow.slick-prev { left: -4rem; }
 
